--- a/Capitulos/introduccion.tex
+++ b/Capitulos/introduccion.tex
@@ -1,17 +1,30 @@
-\chapter*{Introducción}
-En el presente trabajo, se realizara una revisión crítica del estado del arte de las ideas modernas que han dado lugar a una reformulación de los fundamentos estadísticos de la termodinámica desde las herramientas que proporciona la teoría de la información cuántica, así mismo, se  consideran algunos ejemplos de aplicaciones de estas formulaciones  a sistemas de no equilibrio.   
-   En este sentido, comprender las ideas sobre la esencia de la formulación estadística según la tipicidad canónica de estados cuánticos de espacios  de Hilbert  de altas dimensiones replicando los cálculos y desglosando los pasos conceptuales con importancia física , concentrándose en las ideas de Popescu et al;  Y revisar detenidamente los cálculos e ideas nuevas  sobre las aplicaciones de la termodinámica en sistemas fuera de equilibrio dadas por la teoría de la información cuántica , comparando con los avances teóricos  hechos en años anteriores  sin estas herramientas,
-Desde este aspecto,  en el primer capítulo se plantea algunas orientaciones generales partiendo de un breve recuento histórico sobre los fundamentos de la mecánica estadística desde la perspectiva de Bolzman  y Gibbs   
+\chapter{Introducción} 
+%El escrito que se presentará a continuación, quiere centrarse en exponer cómo los fundamentos de la mecánica estadística tiene problemas y su posible resolución gracias al trabajo de Popescu et al \cite{Popescu2006}. Para lograr esto se espera analizar los fundamentos que actualmente tiene la mecánica estadística, mirar las perspectivas más importantes siguiendo una exposición histórica. Para luego poder exponer el enfoque dado por Popescu et al se reproducirán los cálculos del artículos. Con el objetivo de exponer claramente las ideas aportadas en el artículos.
 
-El escrito que se presentará a continuación, quiere centrarse en exponer cómo los fundamentos de la mecánica estadística tiene problemas y su posible resolución gracias al trabajo de Popescu et al \cite{Popescu2006}. Para lograr esto se espera analizar los fundamentos que actualmente tiene la mecánica estadística, mirar las perspectivas más importantes siguiendo una exposición histórica. Para luego poder exponer el enfoque dado por Popescu et al se reproducirán los cálculos del artículos. Con el objetivo de exponer claramente las ideas aportadas en el artículos.
-\\
 La mecánica estadística muestra gran poder para comprender los fenómenos causados por sistemas de muchas partículas. Las predicciones teóricas concuerdan con los experimentos, pero el marco teórico en el que se fundamenta tiene problemas conceptuales que dejan a la teoría en un cimiento débil.  Para exhibir las incongruencias internas de los fundamentos. Se exploran las ideas de Boltzmann y de Gibbs, porque sus enfoques tienen un gran impacto en la creación del marco conceptual de la mecánica estadística.
 \\ 
 En la época de Botlzmann se encontraba la termodinámica como una teoría establecida. Aunque, no se tenían una óptica donde se le diera significado microscópico a la termodinámica. Boltzmann buscando una conexión entre la termodinámica y  el mundo microscópico plantea el teorema H. Este teorema muestra que al pasar el tiempo la función H decrece. La relación con la entropía termodinámica se da al multiplicar la función H por una constante -K, entonces se tiene que la entropía aumenta con el tiempo. El problema con la formulación hecha por Boltzmann, según Jaynes, es que la función H solo entrega la entropía termodinámica  cuando no hay interacción entre partículas.
 \\
 Unos años después, Gibbs postuló su noción de ensambles. Jaynes muesta que la entropía de Gibbs, para todos los casos, es la entropía termodinámica. Aunque sus resultados concuerden con la termodinámica, la entropía de Gibbs no puede dar explicación a la flecha del tiempo, porque esta entropía se conserva a diferencia de la de Boltzmann. Pese a esto el enfoque de Gibbs se muestra poderoso para resolver muchos problemas, pero Gibbs no explicó ¿cómo es posible hablar de un ensamble de posbiles estados microscópicos, estando en un solo estado microscópico? En la literatura se resuelve esta pregunta usando la hipótesis ergódica. Esto acarrea problemas porque no todos los sistemas son ergódicos; y el tiempo para que sistemas ergódicos pasen por todo el espacio son extremadamente grandes. 
 \\
-Nuevas propuestas han salido para resolver estos conflictos, como la perspectiva de Popescu et al. Este nuevo enfoque permite conciliar los puntos de vista anteriores usando herramientas de la teoría cuántica de la información. Esta formulación muestra que, si se tiene un sistema, compuesto por el ambiente y el subsistema, localmente (en el subsistema) se puede describir con una densidad canónica. Entonces hace válida la densidad canónica sin hacer uso de los ensambles, además las probabilidades no se introducen de una manera ajena a la teoría física. Se demuestra que el subsistema está en un estado equiprobable sin necesidad de mostrar ergodicidad en el sistema. También muestra de forma implícita la maximización de entropía por el entrelazamiento. Así es como esta perspectiva muestra una imagen más clara y fuerte del marco teórico. Linden et al \cite{LindenPaper} mostraron que se puede explicar la termalización de los sistemas con ayuda de esta perspectiva, lo cual hace a la nueva formulación útil e interesante para futuras investigaciones.
+Partiendo de los planteamientos realizados por Popescu, Short y Winter, en el artículo “Entanglement and the foundations of statistical mechanics” de \cite{Popescu2006}. Donde se estudia la idea de tipicidad canónica con herramientas de la teoría de la información cuántica. Argumentando que cuando se tiene un sistema cuántico aislado compuesto por el subsistema y el ambiente, siendo el ambiente mucho más grande que el subsistema, se asegura que, aunque se tenga un estado puro de todo el sistema cuántico el subsistema se comportará como si el sistema estuviese en un estado máximamente mezclado. El autor formaliza esta idea dando unas cotas sobre la probabilidad de que haya un subsistema que no se comporte como un estado canónico. Estas cotas decaen de manera exponencial con respecto a la dimensión del sistema. Entonces se postula un nuevo principio, el principio de probabilidades iguales aparentes; por lo tanto, el subsistema tiene la misma probabilidad de estar en cualquier estado admisible. 
 \\
-El orden que seguirá el siguiente escrito seguirá el esqueleto dado en esta introducción. Primero se mostrará el estado del arte concerniente a los fundamentos de la mecánica estadística. Luego se pasará a exhibir el enfoque de Popescu et al y finalizando con  la construcción basada en esta perspectiva. 
+Por otra parte, los planteamientos; igualmente presentados por los mismos autores junto con  Linden en el artículo “Quantum mechanical evolution towards thermal equilibrium” \cite{LindenPaper}  donde se expone en base a la tipicidad canónica cómo los sistemas llegan al equilibrio; partiendo de la explicación sobre qué significa que un sistema llegue al equilibrio, manifestando  que un sistema se dice estar en equilibrio cuando pasa mucho tiempo cerca de un estado particular. También se necesita una condición de independencia sobre el estado inicial del ambiente y el estado inicial del subsistema, porque el estado de equilibrio no debe depender de las condiciones iniciales que tenga el sistema.  La formulación matemática exhibida en este artículo muestra que los estados genéricos y los estados fuera del equilibrio, del subsistema, llegan a termalizarse a un estado específico, siendo este estado el promedio temporal del estado del subsistema.
+\\
+Desde este horizonte de sentido, en el presente trabajo, se realizará una revisión crítica del estado del arte de las ideas modernas que han dado lugar a una reformulación de los fundamentos estadísticos de la termodinámica a partir de las herramientas que proporciona la teoría de la información cuántica, así mismo, se consideran algunos ejemplos de aplicaciones de estas formulaciones a sistemas de lejos del equilibrio.
+\\
+En este sentido, se trata de vislumbrar las ideas sobre la esencia de la formulación estadística según la tipicidad canónica de estados cuánticos de espacios  de Hilbert  de altas dimensiones replicando los cálculos y desglosando los pasos conceptuales con importancia física , concentrándose en las ideas de Popescu et al;  y  revisar detenidamente los cálculos e ideas nuevas  sobre las aplicaciones de la termodinámica en sistemas fuera de equilibrio dadas por la teoría de la información cuántica, comparando con los avances teóricos  hechos en años anteriores  sin estas herramientas,
+\\
+Es así como de manera puntual, en el primer capítulo se esboza primero, algunas orientaciones generales haciendo un breve recuento histórico desde la termodinámica, la teoría cinética; luego los fundamentos de la mecánica estadística desde la perspectiva de Boltzmann y Gibbs; después  el ensamble canónico, el teorema de Liouville  y sus consecuencias, la ergocidad  y finalmente ,el principio de máxima entropía de Jaynes     
+\\
+En el segundo capítulo, se plantea en una primera instancia el entrelazamiento y la mecánica estadística, posteriormente las herramientas de la teoría cuántica, luego el operador de densidad y operador de densidad reducida, después, distancia de traza, algunas definiciones, la idea conceptual, la formulación matemática, el lema de Levy, la demostración del principio general canónico y por último el significado físico.
+\\
+En el tercer capítulo se presenta primero la evolución hacia el equilibrio, luego la especificación del equilibrio para terminar con la equilibración de los sistemas.
+\\
+Finalmente se presentan algunas conclusiones, producto del desarrollo del presente trabajo. 
+%\\
+
+%Nuevas propuestas han salido para resolver estos conflictos, como la perspectiva de Popescu et al. Este nuevo enfoque permite conciliar los puntos de vista anteriores usando herramientas de la teoría cuántica de la información. Esta formulación muestra que, si se tiene un sistema, compuesto por el ambiente y el subsistema, localmente (en el subsistema) se puede describir con una densidad canónica. Entonces hace válida la densidad canónica sin hacer uso de los ensambles, además las probabilidades no se introducen de una manera ajena a la teoría física. Se demuestra que el subsistema está en un estado equiprobable sin necesidad de mostrar ergodicidad en el sistema. También muestra de forma implícita la maximización de entropía por el entrelazamiento. Así es como esta perspectiva muestra una imagen más clara y fuerte del marco teórico. Linden et al \cite{LindenPaper} mostraron que se puede explicar la termalización de los sistemas con ayuda de esta perspectiva, lo cual hace a la nueva formulación útil e interesante para futuras investigaciones.
+%\\
+%El orden que seguirá el siguiente escrito seguirá el esqueleto dado en esta introducción. Primero se mostrará el estado del arte concerniente a los fundamentos de la mecánica estadística. Luego se pasará a exhibir el enfoque de Popescu et al y finalizando con  la construcción basada en esta perspectiva. 
 
