--- a/main.tex
+++ b/main.tex
@@ -18,7 +18,7 @@
 \usepackage[nottoc]{tocbibind}
 \usepackage[pdftex,
             pdfauthor={Germán Eduardo Osorio Leiva},
-            pdftitle={Revisión de los fundamentos de la mecánica estadística desde la perspectiva de la teoría cuántica de la información},
+            pdftitle={Revisión de los fundamentos de la mecánica estadística con herramientas de la teoría cuántica de la información},
             pdfsubject={Física},
             pdfkeywords={entrelazamiento, mecánica estadística},
             pdfproducer={Latex con hyperref},
@@ -64,7 +64,7 @@
 %	PORTADA
 %----------------------------------------------------------------------------------------
 
-\title{Revisión de los fundamentos de la mecánica estadística desde la perspectiva de la teoría cuántica de la información} %Con este nombre se guardará el proyecto en writeLaTex
+\title{Revisión de los fundamentos de la mecánica estadística con herramientas de la teoría cuántica de la información} %Con este nombre se guardará el proyecto en writeLaTex
 
 \begin{titlepage}
 \begin{center}
@@ -80,7 +80,7 @@
 
 \vspace{4em}
 
-\textsc{\huge \textbf{Revisión de los fundamentos de la mecánica estadística desde la perspectiva de la teoría cuántica de la información}}\\[4em]
+\textsc{\huge \textbf{Revisión de los fundamentos de la mecánica estadística con herramientas de la teoría cuántica de la información}}\\[4em]
 
 \textsc{\large Tesis}\\[1em]
 
@@ -92,7 +92,7 @@
 
 \textsc{\Large 	GERMÁN EDUARDO OSORIO LEIVA}\\[1em]
 		
-\textsc{\large Asesor: Alonso Botero Mejía}
+\textsc{\large Asesor: Dr. Alonso Botero Mejía}
 
 \end{center}
 
@@ -145,7 +145,45 @@ René Descartes
 
 \pagestyle{empty}
 \frontmatter
-RESUMEN
+\begin{center}
+\vspace*{5em}
+\textsc{\normalsize Universidad de los Andes}\\[1em]
+
+\textsc{\large \textbf{Abstract}}\\[1em]
+
+\textsc{\normalsize Faculty of Sciences}\\[1em]
+
+\textsc{\normalsize Departament of Physics}\\[1em]
+
+\textsc{\small by Germán Eduardo Osorio Leiva}
+\end{center}
+
+\vspace*{4em}
+In this document will shown which are the foundations of the statistical mechanics nowadays. It will survey the conceptual difficulties that are present in the Gibb's formulation and the Boltzmann's formulation, some are the necessity of the ergodic hypothesis and the concept of entropy for each one. The objective is to present the new approach to the foundations of the statistical mechanics given by Popescu, Short, and Winter \cite{Popescu2006}, they reconcile both perspectives (Gibss' and Boltzmann's),also given some specifications over the nature of probability in the theory, and making obsolte the ergodic hypothesis. The formalism will be reproduced. Finally,it will be shown the approach to thermal equilibrium by Linden, Popescu, Short and Winter \cite{LindenPaper}.
+
+
+%En este escrito estudia cuáles son los fundamentos en donde actualmente se encuentra la mecánica estadística. Se ven las dificultades conceptuales que tienen las perspectivas de Gibbs y Boltzmann, como la necesidad de la hipótesis de la ergodicidad y la entropía de cada formalismo. La meta es ver cómo el enfoque dado a los fundamentos de la mecánica estadística entregado por Popescu, Short y Winter \cite{Popescu2006}, este enfoque concilia las perspectivas de Gibbs y Boltzmann, además de resolver detalles como la naturaleza de la probabilidad en la teoría, y también hacer innecesaria la introducción de la ergodicidad. Se replicará el formalismo dado por los autores. Y se finalizará, viendo como Linden, Popescu, Short y Winter \cite{LindenPaper} usaron el formalismo anterior para demostrar la termalización de sistemas lejos del equilibrio.
+
+\newpage
+
+\begin{center}
+\vspace*{5em}
+\textsc{\normalsize Universidad de los Andes}\\[1em]
+
+\textsc{\large \textbf{Resumen}}\\[1em]
+
+\textsc{\normalsize Facultad de Ciencias}\\[1em]
+
+\textsc{\normalsize Departamento de Física}\\[1em]
+
+\textsc{\small por Germán Eduardo Osorio Leiva}
+\end{center}
+
+\vspace*{4em}
+
+En este escrito estudia cuáles son los fundamentos en donde actualmente se encuentra la mecánica estadística. Se ven las dificultades conceptuales que tienen las perspectivas de Gibbs y Boltzmann, como la necesidad de la hipótesis de la ergodicidad y la entropía de cada formalismo. La meta es ver cómo el enfoque dado a los fundamentos de la mecánica estadística entregado por Popescu, Short y Winter \cite{Popescu2006} concilia estas perspectivas, además de resolver detalles como la naturaleza de la probabilidad en la teoría, y también hacer innecesaria la introducción de la ergodicidad. Se replicará el formalismo dado por los autores. Y se finalizará, viendo como Linden, Popescu, Short y Winter \cite{LindenPaper} usaron el formalismo anterior para demostrar la termalización de sistemas lejos del equilibrio.
+
+
 
 %----------------------------------------------------------------------------------------
 %	AGRADECIMIENTOS
@@ -153,7 +191,7 @@ RESUMEN
 
 
 \chapter*{Agradecimientos}
-Agradezco a mi padre que me ha apoyado en todos mis proyecto confiando en mí y dándome la fortaleza necesaria para las situaciones complicadas. También, siento mucha gratitud hacía mi madre que con su energía y alegría ha hecho de la vida un paseo muy colorido. De la misma manera, hay muchas personas que saben lo importante que son para mí y han hecho de este viaje muy ameno. Estoy muy agradecido con mi asesor Alonso Botero por su orientación.
+Agradezco a mi padre que me ha apoyado en todos mis proyecto confiando en mí y dándome la fortaleza necesaria para las situaciones complicadas. También, siento mucha gratitud hacía mi madre que con su energía y alegría ha hecho de la vida un paseo muy colorido. De la misma manera, hay muchas personas que saben lo importante que son para mí y han hecho de este viaje algo muy ameno. Estoy agradecido con mi asesor de monografía Alonso Botero por su orientación y tutorías.
 %\markboth{INTRODUCCIÓN}{AGRADECIMIENTOS} % encabezado 
 
 
