el regaño del asesor número 1

--- a/Capitulos/Conclusiones.tex
+++ b/Capitulos/Conclusiones.tex
@@ -1,3 +1,8 @@
 \chapter{Conclusiones}
 
-%qué les voy a decir, qué les estoy diciendo, qué les dije 
+En este escrito se hizo un recuento histórico de la termodinámica para llegar a la mecánica estadística. Desde esta perspectiva histórica se mostró la evolución de los distintos conceptos que han fundamentado la mecánica estadística. Se expuso la perspectiva de Boltzmann junto con los las dificultades que esta acarrea. Como las objeciones dadas a su función H y la relación con la entropía termodinámica. La siguiente perspectiva que se exhibió fue la de Gibbs. La cual se condensa en la idea del ensamble. También se señaló los inconvenientes  que el concepto de copias imaginarias tiene, hablar de microestados que posiblemente pueden ser infinitos.\\
+Junto con esto se muestra que hay otras perspectivas más modernas entre ellas la de Jaynes y su máxima entropía. La cual forma el primer vínculo entre la mecánica estadística y la teoría de la información. La perspectiva de Jaynes mejora respecto a las anteriores porque no introduce hipótesis a priori y especifica que la probabilidad es vista desde un sentido subjetivo, algo que las otras perspectivas no especificaban.
+\\
+Ya más adelante se siguió el artículo de Popescu et al  \cite{Popescu2006} mostrando la tipicidad canónica con ayuda de las herramientas de la teoría de la información cuántica. Se replicaron los cálculos del artículo para explicar los detalles del formalismo que los autores propusieron. Con esto puesto se vio la forma en que se conciliaban las perspectivas de Gibbs y Boltzmann gracias a este enfoque. Además el enfoque muestra que el principio de probabilidades a priori se puede reemplazar por el principio general canónico. En esto se concluye que es muy poco probable encontrar un estado que no se encuentre en el estado canónico.
+\\
+Para terminar se vio las extensiones que tiene los nuevos fundamentos gracias a la tipicidad canónica. Se vio la capacidad del principio general canónico tiene para poder explicar cómo se termaliza un sistema. Se reprodujo el análisis hecho por Linden et al \cite{LindenPaper} en este tema. Aunque no pudieron demostrar la independencia del subsistema, abrieron un campo a nuevas investigaciones.
