--- a/Capitulos/cap2.tex
+++ b/Capitulos/cap2.tex
@@ -9,9 +9,9 @@ En este capítulo se seguirá Popescu et al  \cite{Popescu2006} y mostrar una po
 Este capítulo solo se enfocará en mostrar cómo la mayoría de los estados del universo están termalizados sin hablar en ningún momento de la evolución de estos estados. Si en general los estados del universo están termalizados se esperaría que cualquier evolución lleve los estados al equilibrio pero en el siguiente capítulo se darán especificaciones de esta conjetura junto con detalles que hacen ver las complicaciones de formalizar las ideas intuitivas que se tienen sobre el equilibrio.
 \\
 \section{Herramientas de la Teoría Cuántica}
-Para poder ver las herramientas que la teoría de la información cuántica provee; se debe entender el formalismo del operador densidad. En esta sección, primero se mostrará la definición del operador densidad para luego seguir profundizando en el operador de densidad reducido, y finalizar con una subsección sobre la distancia de traza. La distancia de traza, será de gran importancia cuando se quiera especificar que tan lejos dos estados cuánticos están el uno del otro. \\
-La mecánica cuántica en general se introduce desde la perspectiva del vector de estado. Las aplicaciones de este formalismo abarcan una gran cantidad de problemas. Las herramientas entregadas por el vector de estado son poderosas para algunos problemas, pero no siempre es sencillo poder seguir con este formalismo en casos particulares; es por esto que se usa el formalismo de la matriz densidad u operador densidad, cuando se habla de un sistema compuesto por un subsistema y su ambiente. Debido al entrelazamiento que existe ente el subsistema y su ambiente no se puede especificar un estado individual para el subsistema, las herramientas proporcionadas por el operador densidad permite representar las estadísticas de las medidas de uno de los componentes del sistema \cite{Decoherence}. Es pertinente conocer estas herramientas antes de hablar sobre el artículo de Popescu et al.
+La mecánica cuántica en general se introduce desde la perspectiva del vector de estado. La aplicación de este formalismo implica una gran cantidad de problemas. Las herramientas entregadas por el vector de estado son dinámicas para algunos de estos problemas, pero no siempre es sencillo poder seguir con este formalismo en casos particulares; es por esto que se usa el formalismo de la matriz densidad u operador densidad, cuando se habla de un sistema compuesto por un subsistema y su ambiente. Debido al entrelazamiento que existe ente el subsistema y su ambiente no se puede especificar un estado individual para el subsistema, las herramientas proporcionadas por el operador densidad permite representar las estadísticas de las medidas de uno de los componentes del sistema \cite{Decoherence}.
 \\
+
 \subsection{Operador de Densidad}
 Para comprender qué es el operador de densidad se debe empezar por responder cuándo se tiene el máximo conocimiento posible de un estado cuántico. Cuánticamente si el estado $\ket{\psi}$ da toda la información posible de un sistema se le llama un estado puro. Para especificar cuál es el operador densidad de un sistema se supone que el sistema cuántico puede estar en un estado puro, $\ket{\psi_{i}}$ para $i=1,2,...$. Cada estado posible del sistema tiene una probabilidad correspondiente, $p_{i}>0$ y $\sum_{i} p_{i}$. Luego el operador densidad para el sistema es :
 \begin{equation}
