--- a/Capitulos/cap3.tex
+++ b/Capitulos/cap3.tex
@@ -1,6 +1,6 @@
 \chapter{Evolución Hacia El Equilibrio}
 
-En el capítulo anterior se expuso la idea de Popescu et al. \cite{Popescu2006} para poder reconciliar las ideas fundamentales de la mecánica estadística. Se mostró que para estados genéricos de un universo se tiene que el estado del sistema va a estar muy cercano del estado canónico. Ya con esta idea la siguiente pregunta que se puede hacer es sobre la termalización, ¿ Este fenómeno cómo ocurre? ¿ se puede deducir se las ecuaciones básicas(Schrödinger, Newton , etc)?. Este capítulo mostrará lo que Linden et al. \cite{LindenPaper} proponen para poder responder estas preguntas siguiendo las ideas ya dadas en el capítulo anterior. La generalidad que se ha dado a los fundamentos gracias Popescu et al. permite una flexibilidad al momento de manejar nuevos problemas por eso se ve que además de tener una buena base filosófica las matemáticas dan un buen esqueleto para sostener las bases y seguir construyendo con ellas. Ahora se quiere tratar el caso en que el estado no se encuentra en un tiempo específico sino ya en un tiempo  general. Entonces se deberá apuntar la maquinaria que ya se tiene para poder redondear el problema; esto será lo primero a  precisar. Luego se mostrará que por lo general los estados del sistema llegan al equilibrio y duran allí gran parte de su tiempo, todo esto bajo las especificaciones dadas al comienzo. Se seguirá dando un teorema que muestra como para la gran mayoría de casos de estados genéricos se llegará al equilibrio, aquí también se dará un argumento sobre cómo los estados lejanos al equilibrio  llegan a equilibrarse. Además se mostrará la independencia del estado inicial y problemas que no se han llegado a solucionar desde la perspectiva de (referencia).
+En el capítulo anterior se expuso la idea de Popescu et al. \cite{Popescu2006} para poder reconciliar las ideas fundamentales de la mecánica estadística. Se mostró que para estados genéricos de un universo se tiene que el estado del sistema va a estar muy cercano del estado canónico. Ya con esta idea la siguiente pregunta que se puede hacer es sobre la termalización, ¿ Este fenómeno cómo ocurre? ¿ se puede deducir se las ecuaciones básicas(Schrödinger, Newton , etc)?. Este capítulo mostrará lo que Linden et al. \cite{LindenPaper} proponen para poder responder estas preguntas siguiendo las ideas ya dadas en el capítulo anterior. La generalidad que se ha dado a los fundamentos gracias Popescu et al. permite una flexibilidad al momento de manejar nuevos problemas por eso se ve que además de tener una buena base filosófica las matemáticas dan un buen esqueleto para sostener las bases y seguir construyendo con ellas. Ahora se quiere tratar el caso en que el estado no se encuentra en un tiempo específico sino ya en un tiempo  general. Entonces se deberá apuntar la maquinaria que ya se tiene para poder redondear el problema; esto será lo primero a  precisar. Luego se mostrará que por lo general los estados del sistema llegan al equilibrio y duran allí gran parte de su tiempo, todo esto bajo las especificaciones dadas al comienzo. Se seguirá dando un teorema que muestra como para la gran mayoría de casos de estados genéricos se llegará al equilibrio, aquí también se dará un argumento sobre cómo los estados lejanos al equilibrio  llegan a equilibrarse. Además se mostrará la independencia del estado inicial y problemas que no se han llegado a solucionar desde esta perspectiva.
 
 \section{Especificación del Equilibrio}
 
