--- a/main.tex
+++ b/main.tex
@@ -159,7 +159,7 @@ René Descartes
 \end{center}
 
 \vspace*{4em}
-In this document will shown which are the foundations of the statistical mechanics nowadays. It will survey the conceptual difficulties that are present in the Gibb's formulation and the Boltzmann's formulation, some are the necessity of the ergodic hypothesis and the concept of entropy for each one. The objective is to present the new approach to the foundations of the statistical mechanics given by Popescu, Short, and Winter \cite{Popescu2006}, they reconcile both perspectives (Gibss' and Boltzmann's),also given some specifications over the nature of probability in the theory, and making obsolte the ergodic hypothesis. The formalism will be reproduced. Finally,it will be shown the approach to thermal equilibrium by Linden, Popescu, Short and Winter \cite{LindenPaper}.
+In this document will show which are the foundations of the statistical mechanics nowadays. It will survey the conceptual difficulties that are present in Gibbs and the Boltzmann's formulation, some are the necessity of the ergodic hypothesis and the concept of entropy for each formulation. The objective is to present the new approach to the foundations of the statistical mechanics given by Popescu, Short, and Winter \cite{Popescu2006}, they reconcile both perspectives, Gibss' and Boltzmann's; also give some specifications over the nature of probability in the theory, and making obsolete the ergodic hypothesis. The formalism will be reproduced. Finally, it will be show the approach to thermal equilibrium for non equilibrium  systems by Linden, Popescu, Short and Winter \cite{LindenPaper}.
 
 
 %En este escrito estudia cuáles son los fundamentos en donde actualmente se encuentra la mecánica estadística. Se ven las dificultades conceptuales que tienen las perspectivas de Gibbs y Boltzmann, como la necesidad de la hipótesis de la ergodicidad y la entropía de cada formalismo. La meta es ver cómo el enfoque dado a los fundamentos de la mecánica estadística entregado por Popescu, Short y Winter \cite{Popescu2006}, este enfoque concilia las perspectivas de Gibbs y Boltzmann, además de resolver detalles como la naturaleza de la probabilidad en la teoría, y también hacer innecesaria la introducción de la ergodicidad. Se replicará el formalismo dado por los autores. Y se finalizará, viendo como Linden, Popescu, Short y Winter \cite{LindenPaper} usaron el formalismo anterior para demostrar la termalización de sistemas lejos del equilibrio.
